DigicielFull/force-app/main/default/objects/Summary__c/Summary__c.object-meta.xml
<CustomObject>
    <label>Summary</label>
    <nameField>
        <displayFormat>{MM}-{YYYY}-{0000}</displayFormat>
        <label>Summary No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>