DigicielFull/force-app/main/default/objects/Summary__c/fields/Backlog_Total__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Total__c</fullName>
    <label>Backlog Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>