DigicielFull/force-app/main/default/objects/Summary__c/fields/Committed_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Committed_Pipeline__c</fullName>
    <label>Committed Pipeline</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>