DigicielFull/force-app/main/default/objects/Summary__c/fields/Estimated_AOP__c.field-meta.xml
<CustomField>
    <fullName>Estimated_AOP__c</fullName>
    <label>Estimated AOP</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>