DigicielFull/force-app/main/default/objects/Summary__c/fields/Net_AOP_Rental_or_Lease__c.field-meta.xml
<CustomField>
    <fullName>Net_AOP_Rental_or_Lease__c</fullName>
    <label>Net AOP Rental or Lease</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>