DigicielFull/force-app/main/default/objects/Summary__c/fields/Net_Commited_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Net_Commited_Pipeline__c</fullName>
    <label>Net Commited Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>