DigicielFull/force-app/main/default/objects/Summary__c/fields/Net_Contract_Value_MRC__c.field-meta.xml
<CustomField>
    <fullName>Net_Contract_Value_MRC__c</fullName>
    <label>Net Contract Value MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>