DigicielFull/force-app/main/default/objects/Summary__c/fields/Net_MTH_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_MTH_Total__c</fullName>
    <label>Net MTH Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>