DigicielFull/force-app/main/default/objects/Summary__c/fields/Target_Total__c.field-meta.xml
<CustomField>
    <fullName>Target_Total__c</fullName>
    <label>Target Total</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>